# my_compose

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  nginx.conf  package-lock.json
