
[project]
name = "myApp"
version = "0.1.0"
description = "A sample Python project"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"

dependencies = [
    "fastapi >=0.70.0",
    "uvicorn[standard]>=0.34.2",
]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]


